# difx

./: .gitignore  .gitmodules  .readthedocs.yaml  CONTIBUTION.md  CONTRIBUTION.md  README.md  README.txt  distclean.sh  genipppc  index.html  install-difx  make-difx.osx  make-difx.trunk  make-difx1.0  requirements.txt  setup-difx.trunk  setup.bash  setup.csh  setup.difx.bash  setup.difx.csh
applications/calcserver/trunk/: AUTHORS  ChangeLog  Makefile.am  README  configure.ac  configure_ac  postinstall
applications/datasim/trunk/: AUTHORS  Makefile  Makefile.am  README  configure  configure.ac
applications/difx2fits/trunk/: ChangeLog  README  configure.ac
applications/difx_monitor/trunk/: Makefile  Makefile.am  Makefile.orig  README  configure.ac  difx_config.cpp  difx_monitor.cpp  mon3d.c  mon_pl.cpp  mon_sample.c  mon_sample.cpp  monitor_server.cpp  monserver.c  monserver.cpp  monserver.h  stripinput.pl  vcal.cpp
applications/difxcalc11/: ChangeLog  Makefile.am  README  configure.ac  configure_ac
applications/difxcalc11/data/: ocean_load.coef  ocean_pole_tide.coef
applications/difxcalc11/src/: c2poly.i  catmm.f  caxom.f  cctiu.f  cdiuu.f  cetdm.f  cm20u.f  cmabd.f  cmatu.f  cmwob11.i  cmxst11.i  cmxut11.i  cobsn11.i  ctheu.f  cuser11.i  cvecu.f  d_input.i  d_out.f  ddrvr.f  difx_input.h  difx_tcal.h  difxio.h  dmain.f  dsitu.f  dstrt.f  fitpoly_.c  get2s.i  hardisp.f  input11.i  nfmodel.f  param11.i.in  parsedifx.h  parsevis.h  poly.h
applications/difxcalc11/trunk/: ChangeLog  Makefile.am  README  check_stations.sh  configure.ac
applications/difxfilterbank/trunk/: ChangeLog  Makefile.am  README  configure.ac  configure.in
applications/difxfilterbank/utilities/: Makefile.am  difx_fb.h  filterbank2screen.cpp  filterbankcount.cpp  printfilterbank.cpp  readConfig.h  split_fb_scan.c
applications/espresso/: ChangeLog  Makefile.am  README.espresso  archatoa.py  archivec.py  chk_vlbi.py  corr_hosts.txt  disk_exper.py  disk_report.py  espresso.py  espressolaunch.py  espressolib.py  espressoprep.py  fsclock.py  getEOP.py  grepexp.py  install.py  joblen.py  lbafilecheck.py  mjd2vex.py  mk5scans.py  plot_logtime.py  plot_polyco.py  polswapfreqDiFX.py  updateclock.py  updatepos.py
applications/espresso/trunk/: ChangeLog  README.espresso  archatoa.py  archivec.py  archivedifx.py  atcapos.py  chk_vlbi.pl  chk_vlbi.py  configure.ac  copy_difxlog.py  corr_hosts.txt  disk_exper.py  disk_report.py  espresso.py  espressolaunch.py  espressolib.py  espressoprep.py  fsclock.py  getEOP.py  gloPut7T.sh  grepexp.py  install.py  joblen.py  lbafilecheck.py  mjd2vex.py  mk5scans.py  plot_logtime.py  plot_polyco.py  polswapfreqDiFX.py  startcorr.py  updateclock.py  updatepos.py
applications/guiServer/trunk/: Makefile.am  README  configure.ac
applications/hops/trunk/: ChangeLog.txt  Copyright  Fink.txt  MacPorts.txt  Makefile.am  README.difx.txt  README.pgplot.txt  README.txt  README.txt.in  apt-packages.txt  configure.ac  configure.ac.4043  hops.bash.in  hops_config.h  pgplot-drivers.list
applications/m6support/trunk/: Makefile.am  almahdr.c  chk_fixer.sh  configure.ac  exthdr.c  exthdr.h  fillerfrac.sh  fix_the_file.c  fix_the_file.h  glitchplot.sh  hammer.sh  hammerplot.sh  m6scmodule.h  per_file.c  prep-one-scan.sh  r2dbehdr.c  readme.sh  sc_stats.c  sc_stats.h  scan_check.c  scan_fixer.c  set-read-ahead.sh  sg_access.c  sg_access.h  sg_advice.c  sg_spwrda.c  statsplot.py  vdif.h  vdif_epochs.h  vdif_time.c  vdif_time_main.c  vdif_time_util.h  vdiflat.c  vdifopt.c  vdiforr.c  vdifprc.h  vdifrex.c  vdifseq.c  vdifsg2.c  vdifsg2.h  (+10 more)
applications/mk5daemon/: ChangeLog  Makefile.am  README  configure.ac
applications/mk5daemon/mk5dir/: checkdir  fileto5c.cpp  list5c  mark5dir.cpp  mark5dir.h  mark5directorystructs.cpp  mark5directorystructs.h  mk5cp.cpp  mk5dir.cpp  mk5erase.cpp  mk5lock.cpp  mk5map.cpp  mk5map2.cpp  mk5putdir.cpp  mk5test.cpp  nraobaddrives.cpp  record5c.cpp  recover.cpp  startfusemk5.cpp  stopfusemk5.cpp  testmod.cpp  vsn.cpp  watchdog.cpp  watchdog.h
applications/mk5daemon/src/: .gitignore  Makefile.am  condition.cpp  datacopy.cpp  difx.cpp  fuse.cpp  getdir.cpp  loadmon.cpp  logger.cpp  logger.h  mark5a.cpp  mk5daemon.cpp  mk5daemon.h  modules.cpp  monitor.cpp  options.cpp  proc.cpp  proc.h  smart.cpp  smart.h  ssversions.cpp  sukill.cpp  swap.cpp  swap.h  swapmon.cpp  vsis.cpp  vsis_commands.cpp  vsis_commands.h  watchdog.cpp  watchdog.h
applications/mk5daemon/trunk/: ChangeLog  Makefile.am  README  TODO  configure.ac  mk5daemon.spec.in  vlbi-mk5daemon.spec.in
applications/mk5daemon/utils/: Makefile.am  listcpus  listmedia  listmodules  mk5control  mk5return  mk6control.py
applications/polconvert/trunk/: AUTHORS  ChangeLog  Copyright  Makefile.am  README  configure.ac
applications/trunk/src/: Makefile.am  conv2date.c  createRoot.c  createType1s.c  difx2mark4  difx2mark4.c  get_vis.c  root_id.c  single_code.c  swabr.c  type_120.h  write_t100.c  write_t101.c  write_t120.c
applications/vdif_server/trunk/: README  configure.ac  vdif_server.pc.in
libraries/beamformer/: AUTHORS  ChangeLog  Makefile.am  README  configure.ac
libraries/beamformer/docs/: CppBeamformer.docx
libraries/beamformer/examples/: Timing.h  analysis.cpp  benchmark.cpp
libraries/beamformer/matlab/: subspcrfi.m  subspcrfi_3Sigrank.m  subspcrfi_A.m  subspcrfi_MDLrank.m  subspcrfi_MVDR.m  subspcrfi_elemXYZ.m  subspcrfi_getEV.m  subspcrfi_getNoises.m  subspcrfi_imgnoise.m  subspcrfi_loadRxxFile.m  subspcrfi_modelgen2.m  (+6 more)
libraries/difxio/: COPYING  ChangeLog  Makefile.am  README  configure.ac  difxio.h
mpifxcorr/trunk/: ChangeLog  Doxyfile  Makefile.am  README  TEST  TODO  configure.ac  fxcorr.pc.in  mpifxcorr.pc.in
mpifxcorr/utils/: Makefile.am  checkmpifxcorr.cpp  dedisperse_difx.cpp  genmachines.py  joblist.py  jobstatus.py  mpiinittest.cpp  startdifx.py
sites/MPIfR/: ChangeLog  Makefile.am  README  configure.ac
utilities/sim5b/: COPYING  README  configure.ac
utilities/vdifsim/: ChangeLog  README.md  TODO  configure.ac
utilities/xcube/: README  configure.ac
(+6302 files in other folders)
