espressolibdir = @pylibdir@/espressolib

nobase_dist_espressolib_SCRIPTS = \
    espressolib.py \
    __init__.py

dist_bin_SCRIPTS = \
    archatoa.py \
    archivec.py \
    atcapos.py \
    chk_vlbi.py \
    copy_difxlog.py \
    disk_exper.py \
    disk_report.py \
    espresso.py \
    espressolaunch.py \
    espressoprep.py \
    fsclock.py \
    getEOP.py \
    grepexp.py \
    joblen.py \
    lbafilecheck.py \
    mjd2vex.py \
    mk5scans.py \
    plot_logtime.py \
    plot_polyco.py \
    updateclock.py \
    updatepos.py
