AC_INIT([mpifr_site], [2.7] )


AM_INIT_AUTOMAKE

AC_PROG_CC
AM_PROG_CC_C_O
AM_SANITY_CHECK

AC_OUTPUT([ \
	Makefile \
	difxdb/difxarchive/Makefile \
	difxdb/difxexport/Makefile 
	difxdb/prepDifx/Makefile \
	misc/getObsFiles/Makefile \
	misc/datacheckers/Makefile \
	misc/difxslurm/Makefile \
	hops/Makefile \
	mark5/m5tone/Makefile \
	mark6/Makefile \
	noema/Makefile \
	vdif/Makefile \
	vex/Makefile
])
