AC_INIT(src/difxfilterbank.cpp)

PACKAGE=difxfilterbank
VERSION=0.1

AM_INIT_AUTOMAKE($PACKAGE, $VERSION)

DIFXMESSAGE_REQUIRED_VERSION=0.1
MPIFXCORR_REQUIRED_VERSION=1.0
PKG_CHECK_MODULES(DIFXMESSAGE, difxmessage-1.0 >= $DIFXMESSAGE_REQUIRED_VERSION)
PKG_CHECK_MODULES(MPIFXCORR, mpifxcorr-1.0 >= $MPIFXCORR_REQUIRED_VERSION)
AC_SUBST(DIFXMESSAGE_CFLAGS)
AC_SUBST(DIFXMESSAGE_LIBS)
AC_SUBST(MPIFXCORR_CFLAGS)
AC_SUBST(MPIFXCORR_LIBS)

AC_PROG_CXX

AC_OUTPUT(Makefile src/Makefile)
